fix z-index

--- a/components/HeaderNew/styles.css
+++ b/components/HeaderNew/styles.css
@@ -5,7 +5,6 @@
   border-bottom: 1px solid #CCCBCB;
   background-color: white;
   box-shadow: 0px 2px 3px 0px rgba(222, 222, 222, 1);
-  z-index: 2;
   cursor: default;
 }
 
