--- a/components/MenuNew/styles.css
+++ b/components/MenuNew/styles.css
@@ -4,6 +4,7 @@
     background-color: #ffffff;
     outline: 0;
     box-shadow: 0px 1px 10px #CCCBCB;
+    z-index: 20;
 }
 
 .menuSeparator {
